--- a/Infrastructure/CalculationMethods.Infrastructure/CalculationMethods.Infrastructure.csproj
+++ b/Infrastructure/CalculationMethods.Infrastructure/CalculationMethods.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.7" />
   </ItemGroup>
 
   <ItemGroup>
