веб апи, веб репозитории

--- a/Presentation/Blazor/CalculationMethods.Presentation.Blazor/wwwroot/appsettings.json
+++ b/Presentation/Blazor/CalculationMethods.Presentation.Blazor/wwwroot/appsettings.json
@@ -1,5 +1,18 @@
 {
-  "matrix": "matrix",
-  "vector": "vector",
-  "solutionVector":  "solutionVector"
+  "matrix": "matrix.dat",
+  "vector": "vector.dat",
+  "variablesVector": "variablesVector.dat",
+  "rootPath": "C:\\Пользователи\\Rukin\\",
+  "MatrixFromFileOptions": {
+    "OpenTag": "<matrix>",
+    "CloseTag": "</matrix>",
+    "Delimiters": [
+      " "
+    ]
+  },
+  "VectorFileOptions": {
+    "OpenTag": "<vector>",
+    "CloseTag": "</vector>",
+    "Delimiter": " "
+  }
 }
